Expertise to Intellect

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <input type="text" class="att-mod auto-filled-border" name="end-mod" maxlength="2" size="2" />
                     </div>
                     <div id="exp" class="w3-col w3-padding m4 l2">
-                        <span class="label">Expertise</span>
+                        <span class="label">Intellect</span>
                         <input type="text" class="att" name="exp" maxlength="2" size="2" />
                         <input type="text" class="att-mod auto-filled-border" name="exp-mod" maxlength="2" size="2" />
                     </div>
@@ -302,7 +302,7 @@
                         <div id="exp-save" class="box w3-col m4 l2">
                             <input type="checkbox" name="prof" />
                             <input type="text" name="exp-save" maxlength="2" size="2" />
-                            <span class="sub-label">Expertise</span>
+                            <span class="sub-label">Intellect</span>
                         </div>
                         <div id="ins-save" class="box w3-col m4 l2">
                             <input type="checkbox" name="prof" />
@@ -477,7 +477,7 @@
                             <option value="phy">Physicality</option>
                             <option value="agi">Agility</option>
                             <option value="end">Endurance</option>
-                            <option value="exp">Expertise</option>
+                            <option value="exp">Intellect</option>
                             <option value="ins">Insight</option>
                             <option value="inf">Influence</option>
                         </select>
@@ -646,7 +646,7 @@
                                     <option value="phy">Physicality</option>
                                     <option value="agi">Agility</option>
                                     <option value="end">Endurance</option>
-                                    <option value="exp">Expertise</option>
+                                    <option value="exp">Intellect</option>
                                     <option value="ins">Insight</option>
                                     <option value="inf">Influence</option>
                                 </select>
